--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                  function calcular(peso,altura) {
                       return peso/(altura **2)
                  }
-                  ALERT("CLIQUE EM OK PARA COMEÇAR");
+                  alert("CLIQUE EM OK PARA COMEÇAR");
     //Criamdo variáveis
              let nome= prompt("qual seu nome?")
              let peso= prompt(nome+",qual o seu peso?");
