--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <!-fazeno o script java-->
             <script>  
                  function calcular(peso,altura) {
-                      return peso/(altura **2)
+                      return peso/(altura **2);
                  }
                   alert("CLIQUE EM OK PARA COMEÇAR");
     //Criamdo variáveis
-             let nome= prompt("qual seu nome?")
+             let nome= prompt("qual seu nome?");
              let peso= prompt(nome+",qual o seu peso?");
              let altura= prompt(nome+",qul a sua altura?");
              let calculo= calcular(peso,altura);
