--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>cálculo IMC</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body clas="corpo"><br><br><br><br><br>
+<body class="corpo"><br><br><br><br><br>
         <h1 class="titulo">CALCULAR IMC DE:</h1>
         <p class="texto-imc">
 
-            <!-fazeno o script java-->
+            <!--fazendo o script java-->
             <script>  
                  function calcular(peso,altura) {
                       return peso/(altura **2);
